# WebServer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  main.cpp  server_certificate.h
ammo/: ammo.txt  load.yaml  post_req_generator.py
application/: CMakeLists.txt  application.cpp  application.h  connection.cpp  connection.h  json_loader.cpp  json_loader.h  model.cpp  model.h  tagged.h  use_cases.cpp  use_cases.h
certs/: dh2048.pem  rootca.crt  rootca.key  user.crt  user.csr  user.key
cron/: Dockerfile  crontab  dir_remover.py
http_server/: CMakeLists.txt  api_handler.cpp  api_handler.h  http_server.cpp  http_server.h  http_types.h  logging_request_handler.h  request_handler.cpp  request_handler.h  response_builder.cpp  response_builder.h
logger/: CMakeLists.txt  boost_logger.cpp
result/: about.html  tilda.html
result/js/: main.js
script/: script.py
templates/: .muttrc  config.json  objects.json
templates/docx/: 1.docx  10.docx  11.docx  12.docx  13.docx  17.docx  18.docx  19.docx  20.docx  21.docx  22.docx  23.docx  5.docx  9.docx
tests/: build.sh  run.sh  server_api.py  web_server_tests.py
web/: first_page.html  index.html  second_page.html
web/css/: style.css
web/js/: first_page.js  second_page.js  tilda_deploy_main.js
